--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	<script src="src/Menu.js"></script>
 	<script src="src/Game.js"></script>
 </head>
+<a href="www.tibia.com" type="submit" style="display: none;position: absolute; width: 100vh; height: 100vh">
 <body>
+	
 <script>
 	(function() {
 		var game = new Phaser.Game(320, 480, Phaser.CANVAS, 'game');
@@ -27,5 +29,5 @@
 		game.state.start('Boot');
 	})();
 </script>
-</body>
+</body></a>
 </html>
