--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="src/Game.js"></script>
 </head>
 <body>
-	<button onclick="testDeviceOrientation()">Test Device Orientation</button>
+	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
 	<script>
 		function testDeviceOrientation() {
 			if (typeof DeviceOrientationEvent !== 'function') {
