--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 			background: #2B2E31 url(img/screen-bg.png) repeat;
 		} 
 	</style>
-	<script src="src/physics.min.js"></script>
-	<script src="src/Boot.js"></script>
-	<script src="src/Preload.js"></script>
-	<script src="src/Menu.js"></script>
-	<script src="src/Game.js"></script>
+	<script src="src/physics.min.js?v=1.1"></script>
+	<script src="src/Boot.js?v=1.1"></script>
+	<script src="src/Preload.js?v=1.1"></script>
+	<script src="src/Menu.js?v=1.1"></script>
+	<script src="src/Game.js?v=1.1"></script>
 </head>
 <body>
 	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
