--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="PL">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<title>Poke Maze</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<style>
