--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="src/Game.js?v=1.1"></script>
 </head>
 <body>
-	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
+	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">RRequest Device Orientation</button>
 	<script>
 		function testDeviceOrientation() {
 			if (typeof DeviceOrientationEvent !== 'function') {
