--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 			background: #2B2E31 url(img/screen-bg.png) repeat;
 		} 
 	</style>
-	<script src="src/physics.min.js?v=1.1"></script>
-	<script src="src/Boot.js?v=1.1"></script>
-	<script src="src/Preload.js?v=1.1"></script>
-	<script src="src/Menu.js?v=1.1"></script>
-	<script src="src/Game.js?v=1.1"></script>
 </head>
 <body>
-	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">RRequest Device Orientation</button>
+	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
 	<script>
 		function testDeviceOrientation() {
 			if (typeof DeviceOrientationEvent !== 'function') {
@@ -35,7 +30,11 @@
 			document.getElementById('result').innerHTML = 'RESULT: ' + result;
 		}
 	</script>
-	
+		<script src="src/physics.min.js?v=1.1"></script>
+		<script src="src/Boot.js?v=1.1"></script>
+		<script src="src/Preload.js?v=1.1"></script>
+		<script src="src/Menu.js?v=1.1"></script>
+		<script src="src/Game.js?v=1.1"></script>
 <script>
 	(function() {
 		var game = new Phaser.Game(320, 480, Phaser.CANVAS, 'game');
@@ -46,5 +45,6 @@
 		game.state.start('Boot');
 	})();
 </script>
+
 </body>
 </html>
