--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body>
-	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">RRequest Device Orientation</button>
+	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
 	<script>
 		function testDeviceOrientation() {
 			if (typeof DeviceOrientationEvent !== 'function') {
