--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<script src="src/Game.js?v=1.1"></script>
 </head>
 <body>
+	<div id="result" style="color: white;font-size:20px;margin: 0 auto;display: block;"></div>
 	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto;display: block;">Request Device Orientation</button>
 	<script>
 		function testDeviceOrientation() {
