--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<script src="src/Game.js?v=1.1"></script>
 </head>
 <body>
-	<div id="result" style="color: white;font-size:20px;margin: 0 auto;display: block;"></div>
-	<button onclick="testDeviceOrientation()" style="font-size:20px;margin: 0 auto ;display: block;">Request Device Orientation</button>
+	<button onclick="testDeviceOrientation()" style="background-color: rgb(10, 106, 182);
+font-size:20px;color:#fff;border-radius:2%;margin: 0 auto ;display: block;">Click for Permission</button>
 	<script>
 		function testDeviceOrientation() {
 			if (typeof DeviceOrientationEvent !== 'function') {
