--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			}
 
 			function setResult(result) {
-			document.getElementById('result').innerHTML = 'RESULT: ' + result;
+			document.getElementById('result').innerHTML = 'RESULTAT: ' + result;
 		}
 	</script>
 	<script>
